--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
     <div
       class="promo-block parallax-window"
       data-parallax="scroll"
-      data-image-src="img/img_6584.jpg"
+      data-image-src="img/1920x1080/01.jpg"
     >
       <div class="container">
         <div class="row">
