--- a/public/index.html
+++ b/public/index.html
@@ -254,14 +254,12 @@
                   <img class="full-width img-responsive" src="img/800x400/01.jpg" alt="Portfolio Image" />
                 </div>
                 <div class="work-popup-overlay">
-                  <div class="work-popup-content">
-                    <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                  <div class="work-popup-content" width="auto" height="auto">
+                    <a href="javascript:void(0);" class="work-popup-close">Закрыть</a>
                     <div class="margin-b-30">
-                      <h3 class="margin-b-5">Art Of Coding</h3>
-                      <span>Clean &amp; Minimalistic Design</span>
-                    </div>
-                    <div class="row">
-
+                      <h3 class="margin-b-5"></h3>
+                      <img src="img/800x400/01.jpg" alt="Portfolio Image"
+                        style="width: -webkit-fill-available; height: -webkit-fill-available;">
                     </div>
                   </div>
                 </div>
@@ -272,59 +270,53 @@
               <!-- Work -->
               <div class="work work-popup-trigger">
                 <div class="work-overlay">
+                  <img class="full-width img-responsive" src="img/397x300/02.png" alt="Portfolio Image" />
+                </div>
+                <div class="work-popup-overlay">
+                  <div class="work-popup-content">
+                    <a href="javascript:void(0);" class="work-popup-close">Закрыть</a>
+                    <div class="margin-b-30">
+                      <h3 class="margin-b-5"></h3>
+                      <img src="img/397x300/02.png" alt="Portfolio Image"
+                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh;">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- End Work -->
+            </div>
+            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 md-margin-b-4">
+              <!-- Work -->
+              <div class="work work-popup-trigger">
+                <div class="work-overlay">
+                  <img class="full-width img-responsive" src="img/397x300/01.png" alt="Portfolio Image" />
+                </div>
+                <div class="work-popup-overlay">
+                  <div class="work-popup-content">
+                    <a href="javascript:void(0);" class="work-popup-close">Закрыть</a>
+                    <div class="margin-b-30">
+                      <h3 class="margin-b-5"></h3>
+                      <img src="img/397x300/01.png" alt="Portfolio Image"
+                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh;">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- End Work -->
+            </div>
+            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 md-margin-b-4">
+              <!-- Work -->
+              <div class="work work-popup-trigger">
+                <div class="work-overlay">
                   <img class="full-width img-responsive" src="img/397x400/01.jpg" alt="Portfolio Image" />
                 </div>
                 <div class="work-popup-overlay">
                   <div class="work-popup-content">
-                    <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                    <a href="javascript:void(0);" class="work-popup-close">Закрыть</a>
                     <div class="margin-b-30">
-                      <h3 class="margin-b-5">Art Of Coding</h3>
-                      <span>Clean &amp; Minimalistic Design</span>
-                    </div>
-                    <div class="row">
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End Work -->
-            </div>
-            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 md-margin-b-4">
-              <!-- Work -->
-              <div class="work work-popup-trigger">
-                <div class="work-overlay">
-                  <img class="full-width img-responsive" src="img/397x300/01.jpg" alt="Portfolio Image" />
-                </div>
-                <div class="work-popup-overlay">
-                  <div class="work-popup-content">
-                    <a href="javascript:void(0);" class="work-popup-close">Hide</a>
-                    <div class="margin-b-30">
-                      <h3 class="margin-b-5">Art Of Coding</h3>
-                      <span>Clean &amp; Minimalistic Design</span>
-                    </div>
-                    <div class="row">
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End Work -->
-            </div>
-            <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 md-margin-b-4">
-              <!-- Work -->
-              <div class="work work-popup-trigger">
-                <div class="work-overlay">
-                  <img class="full-width img-responsive" src="img/397x300/02.jpg" alt="Portfolio Image" />
-                </div>
-                <div class="work-popup-overlay">
-                  <div class="work-popup-content">
-                    <a href="javascript:void(0);" class="work-popup-close">Hide</a>
-                    <div class="margin-b-30">
-                      <h3 class="margin-b-5">Art Of Coding</h3>
-                      <span>Clean &amp; Minimalistic Design</span>
-                    </div>
-                    <div class="row">
-
+                      <h3 class="margin-b-5"></h3>
+                      <img src="img/397x400/01.jpg" alt="Portfolio Image"
+                        style="max-width: -webkit-fill-available; height: -webkit-fill-available;max-height: 80vh;">
                     </div>
                   </div>
                 </div>
@@ -339,12 +331,11 @@
                 </div>
                 <div class="work-popup-overlay">
                   <div class="work-popup-content">
-                    <a href="javascript:void(0);" class="work-popup-close">Hide</a>
+                    <a href="javascript:void(0);" class="work-popup-close">Закрыть</a>
                     <div class="margin-b-30">
-                      <h3 class="margin-b-5">Art Of Coding</h3>
-                      <span>Clean &amp; Minimalistic Design</span>
-                    </div>
-                    <div class="row">
+                      <h3 class="margin-b-5"></h3>
+                      <img src="img/397x300/03.jpg" alt="Portfolio Image"
+                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh;">
                     </div>
                   </div>
                 </div>
