--- a/public/index.html
+++ b/public/index.html
@@ -201,11 +201,11 @@
               <div class="col-md-4 md-margin-b-4">
                 <div class="service bg-color-base wow zoomIn" data-height="height" data-wow-duration=".3"
                   data-wow-delay=".1s" style="text-align:center">
-                  <div class="service-element">
+                  <div class="service-element" style="text-align:center">
                     <i class="service-icon color-white icon-heart"></i>
                   </div>
                   <div class="service-info">
-                    <h3 class="color-white">Свадьбы</h3>
+                    <h3 class="color-white" style="text-align:center">Свадьбы</h3>
                     <p class="color-white margin-b-5" style="text-align:center">
                       трогательные моменты<br> + <br>НЕскучные конкурсы <br>+<br> неповторимая
                       атмосфера<br> =<br> идеальный свадебный банкет
@@ -353,6 +353,7 @@
   <div id="price">
     <div class="bg-color-sky-light">
       <div class="container content-lg">
+        <h2>Услуги</h2>
         <div class="row">
           <div class="col-md-6 md-margin-b-4">
             <div class="service" data-height="height">
