--- a/public/index.html
+++ b/public/index.html
@@ -270,14 +270,14 @@
               <!-- Work -->
               <div class="work work-popup-trigger">
                 <div class="work-overlay">
-                  <img class="full-width img-responsive" src="img/397x300/02.png" alt="Portfolio Image" />
+                  <img class="full-width img-responsive" src="img/397x300/02.jpg" alt="Portfolio Image" />
                 </div>
                 <div class="work-popup-overlay">
                   <div class="work-popup-content">
                     <a href="javascript:void(0);" class="work-popup-close">Закрыть</a>
                     <div class="margin-b-30">
                       <h3 class="margin-b-5"></h3>
-                      <img src="img/397x300/02.png" alt="Portfolio Image"
+                      <img src="img/397x300/02.jpg" alt="Portfolio Image"
                         style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh;">
                     </div>
                   </div>
@@ -289,14 +289,14 @@
               <!-- Work -->
               <div class="work work-popup-trigger">
                 <div class="work-overlay">
-                  <img class="full-width img-responsive" src="img/397x300/01.png" alt="Portfolio Image" />
+                  <img class="full-width img-responsive" src="img/397x300/01.jpg" alt="Portfolio Image" />
                 </div>
                 <div class="work-popup-overlay">
                   <div class="work-popup-content">
                     <a href="javascript:void(0);" class="work-popup-close">Закрыть</a>
                     <div class="margin-b-30">
                       <h3 class="margin-b-5"></h3>
-                      <img src="img/397x300/01.png" alt="Portfolio Image"
+                      <img src="img/397x300/01.jpg" alt="Portfolio Image"
                         style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh;">
                     </div>
                   </div>
