--- a/public/index.html
+++ b/public/index.html
@@ -259,7 +259,7 @@
                     <div class="margin-b-30">
                       <h3 class="margin-b-5"></h3>
                       <img src="img/800x400/01.jpg" alt="Portfolio Image"
-                        style="width: -webkit-fill-available; height: -webkit-fill-available;">
+                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh; width: auto;">
                     </div>
                   </div>
                 </div>
@@ -278,7 +278,7 @@
                     <div class="margin-b-30">
                       <h3 class="margin-b-5"></h3>
                       <img src="img/397x300/02.jpg" alt="Portfolio Image"
-                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh;">
+                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh; width: auto;">
                     </div>
                   </div>
                 </div>
@@ -297,7 +297,7 @@
                     <div class="margin-b-30">
                       <h3 class="margin-b-5"></h3>
                       <img src="img/397x300/01.jpg" alt="Portfolio Image"
-                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh;">
+                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh; width: auto;">
                     </div>
                   </div>
                 </div>
@@ -316,7 +316,7 @@
                     <div class="margin-b-30">
                       <h3 class="margin-b-5"></h3>
                       <img src="img/397x400/01.jpg" alt="Portfolio Image"
-                        style="max-width: -webkit-fill-available; height: -webkit-fill-available;max-height: 80vh;">
+                        style="max-width: -webkit-fill-available;height: -webkit-fill-available;max-height: 80vh; width: auto;">
                     </div>
                   </div>
                 </div>
