--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta content="Ведущий для вашего мероприятия Кирилл Фаюстов, город Тверь" name="description" />
+  <meta name="Keywords" content="Ведущий, тамада, мероприятия, Тверь, ведущий Тверь, недорогой ведущий Тверь, хороший ведущий Тверь, ведущий тверская область, ведущий Кирилл Фаюстов, Кирилл Фаюстов, ведущий Кирилл Фаюстов Тверь, ТО"> 
+
   <meta content="" name="author" />
 
   <!-- GLOBAL MANDATORY STYLES -->
