--- a/public/index.html
+++ b/public/index.html
@@ -296,18 +296,18 @@
           
           <div class="mySlides fade-sl">
             <div class="numbertext-sl"></div>
-            <img src="img/gallery/06.png" style="width:auto; height:60vh;">
+            <img src="img/gallery/06.jpg" style="width:auto; height:60vh;">
             <div class="text-sl"></div>
           </div>
           <div class="mySlides fade-sl">
             <div class="numbertext-sl"></div>
-            <img src="img/gallery/07.png" style="width:auto; height:60vh;">
+            <img src="img/gallery/07.jpg" style="width:auto; height:60vh;">
             <div class="text-sl"></div>
           </div>
           
           <div class="mySlides fade-sl">
             <div class="numbertext-sl"></div>
-            <img src="img/gallery/08.png" style="width:auto; height:60vh;">
+            <img src="img/gallery/08.jpg" style="width:auto; height:60vh;">
             <div class="text-sl"></div>
           </div>
 
