--- a/public/index.html
+++ b/public/index.html
@@ -348,7 +348,7 @@
                   <li>длительность мероприятия 5-6 часов</li>
                   <li>работа ведущего</li>
                 </ul>
-                <h3 style="text-align:center">Стоимость: 12 000 руб</h3>
+                <h3 style="text-align:center">Стоимость: 13 000 ₽</h3>
                 </p>
               </div>
             </div>
@@ -373,7 +373,7 @@
                   <li class="color-white"><b>звуковое и световое оборудование</b></li>
                   <li class="color-white"><b>составление индивидуального плей-листа вечера</b></li>
                 </ul>
-                <h3 class="color-white" style="text-align:center">Стоимость: 16 000 руб</h3>
+                <h3 class="color-white" style="text-align:center">Стоимость: 20 000 ₽</h3>
                 </p>
               </div>
             </div>
@@ -385,9 +385,9 @@
             <div class="service">
 
               <h4 style="text-align:center">
-                Доп.час работы ведущего - 2000 руб</h4>
+                Час работы ведущего - 3000 ₽</h4>
               <h4 style="text-align:center">
-                Доп.час работы диджея - 1000 руб</h4>
+                Час работы ведущего и диджея - 3500 ₽</h4>
             </div>
           </div>
         </div>
